--- a/index.html
+++ b/index.html
@@ -8,316 +8,10 @@
         <link rel="stylesheet" href="./styles.css">
     </head>
 
-    <body id="body">
-        <div class="topo">
-            <span class="topo-titulo">DrivenEats</span>
-            <span class="topo-subtitulo">Sua comida em 6 minutos</span>
+    <body>
+        <div>
+            hi
         </div>
-        <div class="menu">
-            <div class="pratos">
-                <div>
-                    <span class="titulos-menu">Primeiro, um prato</span>
-                </div>
-                <div class="opcoes">
-                    <button class="prato" onclick="select_prato()" id="prato1" data-test="dish">
-                        <img src="./imgs/sand-maca.png">
-                        <span class="prato-nome" data-test="item-name">Sanduíche de macarrão</span>
-                        <span class="prato-descricao">Sanduíche & macarrão: nada mais.</span>
-                        <span class="prato-preco" data-test="item-price">R$ 9,90</span>
-                        <ion-icon id="icon-check" name="checkmark-circle"></ion-icon>
-                    </button>
-                    <button class="prato" onclick="select_prato()" id="prato2" data-test="dish">
-                        <img src="./imgs/hotdog-peanut.png">
-                        <span class="prato-nome" data-test="item-name">(mordido) Banana quente com manteiga de amendoim e geleia</span>
-                        <span class="prato-descricao">Disponível nas melhores lojas da sua região, já mordido</span>
-                        <span class="prato-preco" data-test="item-price">R$ 11,90</span>
-                        <ion-icon id="icon-check" name="checkmark-circle"></ion-icon>
-                    </button>
-                    <button class="prato" onclick="select_prato()" id="prato3" data-test="dish">
-                        <img src="./imgs/pizza-kiwi.png">
-                        <span class="prato-nome" data-test="item-name">Pizza de kiwi</span>
-                        <span class="prato-descricao">Uma pizza refrescante para os amantes de aventura!</span>
-                        <span class="prato-preco" data-test="item-price">R$ 15,90</span>
-                        <ion-icon id="icon-check" name="checkmark-circle"></ion-icon>
-                    </button>
-                </div>
-            </div>
-            <div class="bebidas">
-                <div>
-                    <span class="titulos-menu">Agora, sua bebida</span>
-                </div>
-                <div class="opcoes">
-                    <button class="prato" onclick="select_bebida()" id="bebida1" data-test="drink">
-                        <img src="./imgs/limonada-batata-frita.png">
-                        <span class="prato-nome" data-test="item-name">Limonada de batata frita</span>
-                        <span class="prato-descricao">Por que pedir o acompanhamento e a bebida separados?</span>
-                        <span class="prato-preco" data-test="item-price">R$ 7,90</span>
-                        <ion-icon id="icon-check" name="checkmark-circle"></ion-icon>
-                    </button>
-                    <button class="prato" onclick="select_bebida()" id="bebida2" data-test="drink">
-                        <img src="./imgs/vinho-instantaneo.png">
-                        <span class="prato-nome" data-test="item-name">Vinho instantâneo</span>
-                        <span class="prato-descricao">Vinho demora muito para ser feito... mas não aqui na DrivenEats!</span>
-                        <span class="prato-preco" data-test="item-price">R$ 13,90</span>
-                        <ion-icon id="icon-check" name="checkmark-circle"></ion-icon>
-                    </button>
-                    <button class="prato" onclick="select_bebida()" id="bebida3" data-test="drink">
-                        <img src="./imgs/ovos-crus.png">
-                        <span class="prato-nome" data-test="item-name">4 ovos crus</span>
-                        <span class="prato-descricao">O boost de proteína que você merece!</span>
-                        <span class="prato-preco" data-test="item-price">R$ 4,90</span>
-                        <ion-icon id="icon-check" name="checkmark-circle"></ion-icon>
-                    </button>
-                </div>
-            </div>
-            <div class="sobremesas">
-                <div>
-                    <span class="titulos-menu">Por fim, sua sobremesa</span>
-                </div>
-                <div class="opcoes">
-                    <button class="prato" onclick="select_sobremesa()" id="sobremesa1" data-test="dessert">
-                        <img src="./imgs/miojo-banana.png">
-                        <span class="prato-nome" data-test="item-name">Miojo com banana</span>
-                        <span class="prato-descricao">Tinha sobrado um pouco de vinho e hotdog na dispensa...</span>
-                        <span class="prato-preco" data-test="item-price">R$ 5,90</span>
-                        <ion-icon id="icon-check" name="checkmark-circle"></ion-icon>
-                    </button>
-                    <button class="prato" onclick="select_sobremesa()" id="sobremesa2" data-test="dessert">
-                        <img src="./imgs/picole-sopa-frango.png">
-                        <span class="prato-nome" data-test="item-name">Picolé de sopa de frango</span>
-                        <span class="prato-descricao">Unindo o útil ao desagradável desde 2023</span>
-                        <span class="prato-preco" data-test="item-price">R$ 8,90</span>
-                        <ion-icon id="icon-check" name="checkmark-circle"></ion-icon>
-                    </button>
-                    <button class="prato" onclick="select_sobremesa()" id="sobremesa3" data-test="dessert">
-                        <img src="./imgs/yakissoba-chocolate.png">
-                        <span class="prato-nome" data-test="item-name">Yakissoba sabor chocolate</span>
-                        <span class="prato-descricao">Insumos de vinho japonês acrescentados do chocolate mais barato do mercado</span>
-                        <span class="prato-preco" data-test="item-price">R$ 15,90</span>
-                        <ion-icon id="icon-check" name="checkmark-circle"></ion-icon>
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="base">
-            <button class="botao-pedido" id="botao-pedido" disabled="disabled" data-test="order-btn">
-                <span id="frase-botao-pedido">Selecione os 3 para fechar seu pedido</span>
-            </button>
-        </div>
-        <div class="confirmacao" id="confirmacao" data-test="confirm-order-modal">
-            <span class="conf-titulo">Confirme seu pedido</span>
-            <div class="conf-lines">
-                <span id="conf-pratonome"></span>
-                <span id="conf-pratopreco"></span>
-            </div>
-            <div class="conf-lines">
-                <span id="conf-bebidanome"></span>
-                <span id="conf-bebidapreco"></span>
-            </div>
-            <div class="conf-lines">
-                <span id="conf-sobremesanome"></span>
-                <span id="conf-sobremesapreco"></span>
-            </div>
-            <div class="conf-total">
-                <span>TOTAL</span>
-                <span id="conf-precototal"></span>
-            </div>
-            <button class="conf-confirmar" onclick="whatsapp()" data-test="confirm-order-btn">Confirmar pedido</button>
-            <button class="conf-cancelar" onclick="cancel()" data-test="cancel-order-btn">Cancelar</button>
-        </div>
-        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     </body>
 </html>
 
-<script>
-    function mudar_botao_pedido(){
-        let opcoes = ["prato", "bebida", "sobremesa"];
-        let nome_prato = "";
-        let preco_prato = 0;
-        let nome_bebida = "";
-        let preco_bebida = 0;
-        let nome_sobremesa = "";
-        let preco_sobremesa = 0;
-        let preco_total = 0;
-        for (let a=0; a<3; a++){
-            for (let b=1; b<4; b++){
-                let id = opcoes[a]+ b;
-                if (document.getElementById(id).style.border == "5px solid green"){
-                    if (opcoes[a] == "prato"){
-                        if (id=="prato1"){
-                            nome_prato = "Sanduíche de macarrão";
-                            preco_prato = 9.90;
-                        }
-                        else if (id=="prato2"){
-                            nome_prato = "Banana quente com manteiga de amendoim e geleia";
-                            preco_prato = 11.90;
-                        }
-                        else if (id=="prato3"){
-                            nome_prato = "Pizza de kiwi";
-                            preco_prato = 15.90;
-                        }
-                        document.getElementById("conf-pratonome").innerHTML = nome_prato;
-                        document.getElementById("conf-pratopreco").innerHTML = preco_prato.toFixed(2).toString().replace(".", ",");
-                        break;
-                    }
-                    else if (opcoes[a] == "bebida"){
-                        if (id=="bebida1"){
-                            nome_bebida = "Limonada de batata frita";
-                            preco_bebida = 7.90;
-                        }
-                        else if (id=="bebida2"){
-                            nome_bebida = "Vinho instantâneo";
-                            preco_bebida = 13.90;
-                        }
-                        else if (id=="bebida3"){
-                            nome_bebida = "4 ovos crus";
-                            preco_bebida = 4.90;
-                        }
-                        document.getElementById("conf-bebidanome").innerHTML = nome_bebida;
-                        document.getElementById("conf-bebidapreco").innerHTML = preco_bebida.toFixed(2).toString().replace(".", ",");
-                        break;
-                    }
-                    else if (opcoes[a] == "sobremesa"){
-                        if (id=="sobremesa1"){
-                            nome_sobremesa = "Miojo com banana";
-                            preco_sobremesa = 5.90;
-                        }
-                        else if (id=="sobremesa2"){
-                            nome_sobremesa = "Picolé de sopa de frango";
-                            preco_sobremesa = 8.90;
-                        }
-                        else if (id=="sobremesa3"){
-                            nome_sobremesa = "Yakissoba sabor chocolate";
-                            preco_sobremesa = 15.90;
-                        }
-                        document.getElementById("conf-sobremesanome").innerHTML = nome_sobremesa;
-                        document.getElementById("conf-sobremesapreco").innerHTML = preco_sobremesa.toFixed(2).toString().replace(".", ",");
-                        break;
-                    }
-                }
-            }
-        }
-        if (preco_prato != 0 && preco_bebida != 0 && preco_sobremesa != 0){
-            document.getElementById("frase-botao-pedido").innerHTML = "Fechar pedido";
-            document.getElementById("botao-pedido").disabled = false;
-            document.getElementById("botao-pedido").style.backgroundColor = "green";
-            preco_total = preco_prato + preco_bebida + preco_sobremesa;
-            document.getElementById("conf-precototal").innerHTML = "R$" + preco_total.toFixed(2).toString().replace(".", ",");
-            document.getElementById("botao-pedido").onclick = function () {confirmacao();};
-        }
-    }
-    function select_prato(){
-        let b = event.target.closest('button');
-        let c = b.children;
-        for (let a=1; a<4;a++){
-            let id = "prato" + a;
-            elem = document.getElementById(id);
-            elem.style.border = "5px solid rgb(255, 255, 255)";
-            elem.children[4].style.display = "none";
-        }
-        b.style.border = "5px solid green";
-        c[4].style.display = "inline";
-        mudar_botao_pedido();
-    }
-    function select_bebida(){
-        let b = event.target.closest('button');
-        let c = b.children;
-        for (let a=1; a<4;a++){
-            let id = "bebida" + a;
-            elem = document.getElementById(id);
-            elem.style.border = "5px solid rgb(255, 255, 255)";
-            elem.children[4].style.display = "none";
-        }
-        b.style.border = "5px solid green";
-        c[4].style.display = "inline";
-        mudar_botao_pedido();
-    }
-    function select_sobremesa(){
-        let b = event.target.closest('button');
-        let c = b.children;
-        for (let a=1; a<4;a++){
-            let id = "sobremesa" + a;
-            elem = document.getElementById(id);
-            elem.style.border = "5px solid rgb(255, 255, 255)";
-            elem.children[4].style.display = "none";
-        }
-        b.style.border = "5px solid green";
-        c[4].style.display = "inline";
-        mudar_botao_pedido();
-    }
-    function confirmacao(){
-        document.getElementById("confirmacao").style.display = "flex";
-    }
-    function whatsapp(){
-        let opcoes = ["prato", "bebida", "sobremesa"];
-        let nome_prato = "";
-        let preco_prato = 0;
-        let nome_bebida = "";
-        let preco_bebida = 0;
-        let nome_sobremesa = "";
-        let preco_sobremesa = 0;
-        let preco_total = 0;
-        let texto = "";
-        let nome_cliente = window.prompt("Qual o seu nome?", "Nome");
-        let endereco_cliente = window.prompt("Qual o seu endereço?", "Endereço");
-        for (let a=0; a<3; a++){
-            for (let b=1; b<4; b++){
-                let id = opcoes[a]+ b;
-                if (document.getElementById(id).style.border == "5px solid green"){
-                    if (opcoes[a] == "prato"){
-                        if (id=="prato1"){
-                            nome_prato = "Sanduíche de macarrão";
-                            preco_prato = 9.90;
-                        }
-                        else if (id=="prato2"){
-                            nome_prato = "Banana quente com manteiga de amendoim e geleia";
-                            preco_prato = 11.90;
-                        }
-                        else if (id=="prato3"){
-                            nome_prato = "Pizza de kiwi";
-                            preco_prato = 15.90;
-                        }
-                        break;
-                    }
-                    else if (opcoes[a] == "bebida"){
-                        if (id=="bebida1"){
-                            nome_bebida = "Limonada de batata frita";
-                            preco_bebida = 7.90;
-                        }
-                        else if (id=="bebida2"){
-                            nome_bebida = "Vinho instantâneo";
-                            preco_bebida = 13.90;
-                        }
-                        else if (id=="bebida3"){
-                            nome_bebida = "4 ovos crus";
-                            preco_bebida = 4.90;
-                        }
-                        break;
-                    }
-                    else if (opcoes[a] == "sobremesa"){
-                        if (id=="sobremesa1"){
-                            nome_sobremesa = "Miojo com banana";
-                            preco_sobremesa = 5.90;
-                        }
-                        else if (id=="sobremesa2"){
-                            nome_sobremesa = "Picolé de sopa de frango";
-                            preco_sobremesa = 8.90;
-                        }
-                        else if (id=="sobremesa3"){
-                            nome_sobremesa = "Yakissoba sabor chocolate";
-                            preco_sobremesa = 15.90;
-                        }
-                        break;
-                    }
-                }
-            }
-        }
-        preco_total = preco_prato + preco_bebida + preco_sobremesa;
-        texto = encodeURIComponent("Olá, gostaria de fazer o pedido:\n- Prato: " + nome_prato + "\n- Bebida: " + nome_bebida + "\n- Sobremesa: " + nome_sobremesa + "\nTotal: R$ " + preco_total.toFixed(2).toString().replace(".", ",") + "\n\nNome: " + nome_cliente + "\nEndereço: " + endereco_cliente)
-        window.location.href="https://wa.me/?text=" + texto;
-    }
-    function cancel(){
-        document.getElementById("confirmacao").style.display = "none";
-    }
-</script>
