--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="resetCss.css">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/resetCss.css">
+        <link rel="stylesheet" href="/styles.css">
     </head>
 
     <body>
