Some animations done

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </head>
 
     <body>
-        <div>
-            teste
+        <div class="test">
+            <div class="button"></div>
         </div>
     </body>
 </html>
