--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
                     </div>
                 </div>
             </div>
+
+            <a href="br.qr-code-generator.com/" border="0" style="cursor:default" rel="nofollow"><img src="https://chart.googleapis.com/chart?cht=qr&chl=http%3A%2F%2Fdraxter-07.github.io&chs=180x180&choe=UTF-8&chld=L|2"></a>
         </div>
 
         <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
