Response CSS done

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         <link rel="stylesheet" href="./rightContentStyle.css">
         <link rel="stylesheet" href="./linksStyle.css">
 
+        <link rel="stylesheet" href="./generalResponseStyle.css">
+        <link rel="stylesheet" href="./topResponseStyle.css">
+        <link rel="stylesheet" href="./leftContentResponseStyle.css">
+        <link rel="stylesheet" href="./rightContentResponseStyle.css">
+        <link rel="stylesheet" href="./linksResponseStyle.css">
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
