--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="./leftContent/leftContentStyle.css">
         <link rel="stylesheet" href="./rightContent/rightContentStyle.css">
         <link rel="stylesheet" href="./linksStyle/linksStyle.css">
+        <link rel="stylesheet" href="./ad/ad.css">
 
         <link rel="stylesheet" href="./generalStyle/generalResponseStyle.css">
         <link rel="stylesheet" href="./topStyle/topResponseStyle.css">
@@ -118,6 +119,19 @@
 
         <div class="bottom">
             <img src="https://chart.googleapis.com/chart?cht=qr&chl=http%3A%2F%2Fdraxter-07.github.io&chs=100x100&choe=UTF-8&chld=L|2">
+        </div>
+
+        <div class="ad">
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3801473523911740" crossorigin="anonymous"></script>
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-format="fluid"
+                data-ad-layout-key="-hu+4+18-27-l"
+                data-ad-client="ca-pub-3801473523911740"
+                data-ad-slot="9500113397"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
         </div>
         
     </body>
