--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <a href="https://wa.me/5541991718360" target="_blank"><ion-icon name="logo-whatsapp"></ion-icon></a>
                 </div>
                 <div class="link">
-                    <a href="mailto:philippe.idalgoprestes@gmail.com " target="_top"><ion-icon name="mail"></ion-icon></a>
+                    <a href="mailto:philippe.idalgoprestes@gmail.com " target="_blank"><ion-icon name="mail"></ion-icon></a>
                 </div>
             </div>
         </div>
@@ -72,23 +72,52 @@
                         <div class="resumeBasics">
                             <div class="resumeBasicInfo">
                                 <div class="resumeBasicInfoIcon">
-                                    <ion-icon name="star-outline"></ion-icon>
+                                    <ion-icon style="color: var(--primaryColor)" name="star-outline"></ion-icon>
                                 </div>
-                                <span>Ajaccio - Córsega</span>
+                                <span>Porto Alegre - Brasil</span>
                             </div>
-                        </div>
-                        <div class="resumeBasics">
                             <div class="resumeBasicInfo">
                                 <div class="resumeBasicInfoIcon">
-                                    <ion-icon name="star"></ion-icon>
+                                    <ion-icon style="color: var(--secundaryColor)" name="calendar"></ion-icon>
                                 </div>
-                                <span>Longwood - Inglaterra</span>
+                                <span>2 de Agosto de 2002</span>
+                            </div>
+
+                            <div class="resumeBasicSkill">
+                                <div class="resumeBasicInfoIcon">
+                                    <ion-icon style="color: rgb(48, 105, 152)" name="logo-python"></ion-icon>
+                                </div>
+                                <div class="loadingBar">
+                                    <div class="loadingBackground">
+                                        <div id="pythonLoad" class="load" style="width: 40%;"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="resumeBasicSkill">
+                                <div class="resumeBasicInfoIcon">
+                                    <ion-icon style="color: rgb(240, 101, 41)" name="logo-html5"></ion-icon>
+                                </div>
+                                <div class="loadingBar">
+                                    <div class="loadingBackground">
+                                        <div id="htmlLoad" class="load" style="width: 60%;"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="resumeBasicSkill">
+                                <div class="resumeBasicInfoIcon">
+                                    <ion-icon style="color: rgb(240, 219, 79)" name="logo-react"></ion-icon>
+                                </div>
+                                <div class="loadingBar">
+                                    <div class="loadingBackground">
+                                        <div id="reactLoad" class="load" style="width: 70%;"></div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="resumeText">
-                            <span>Napoleão (Ajaccio, 15 de agosto de 1769 – Longwood, 5 de maio de 1821) foi um estadista e líder militar francês que ganhou destaque durante a Revolução Francesa e liderou várias campanhas militares de sucesso durante as Guerras Revolucionárias Francesas.</span>
-                            <span>Foi imperador dos franceses como Napoleão I de 1804 a 1814 e brevemente em 1815 durante os Cem Dias.</span>
-                            <span>Napoleão dominou os assuntos europeus e globais por mais de uma década, enquanto liderava a França contra uma série de coalizões nas guerras napoleônicas. Ele venceu a maioria desses conflitos e a grande maioria de suas batalhas, construindo um grande império que governava grande parte da Europa continental antes de seu colapso final em 1815.</span>
+                            <span>yet to be written</span>
                         </div>
                     </div>
                 </div>
