--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>Philippe Idalgo Prestes</title>
-        <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/9346/9346673.png">
+        <link rel="icon" type="image/x-icon" href="https://www.bomjesus.br/galeria/getImage/477/1468195724281582.jpg">
 
         <link rel="stylesheet" href="./generalStyle/resetCss.css">
 
@@ -68,7 +68,7 @@
                         <button class="resumeTextTitleButton" onclick="showContent()"><ion-icon name="arrow-down"></ion-icon></button>
                     </div>
                     <div class="resumeContentContent">
-                        <img class="resumeImage" src="https://avatars.githubusercontent.com/u/129225125?v=4">
+                        <img class="resumeImage" src="https://www.bomjesus.br/galeria/getImage/477/1468195724281582.jpg">
                         <div class="resumeBasics">
                             <div class="resumeBasicInfo">
                                 <div class="resumeBasicInfoIcon">
