--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="resumeContent">
                     <div class="resumeTextTitle">
                         <span>Bio</span>
-                        <button class="resumeTextTitleButton" onclick="showContent()"><ion-icon name="arrow-down"></ion-icon></button>
+                        <button class="resumeTextTitleButton" onclick="showResumeContent()"><ion-icon name="arrow-down"></ion-icon></button>
                     </div>
                     <div class="resumeContentHidden">
                         <img class="resumeImage" src="./assets/philippe.jpeg">
@@ -68,7 +68,7 @@
                                 <img class="resumeBasicInfoIcon" src="./assets/python.png">
                                 <div class="loadingBar">
                                     <div class="loadingBackground">
-                                        <div id="pythonLoad" class="load" style="width: 50%;"></div>
+                                        <div id="pythonLoad" class="load" style="width: 60%;"></div>
                                     </div>
                                 </div>
                             </div>
@@ -77,7 +77,7 @@
                                 <img class="resumeBasicInfoIcon" src="./assets/html.png">
                                 <div class="loadingBar">
                                     <div class="loadingBackground">
-                                        <div id="htmlLoad" class="load" style="width: 60%;"></div>
+                                        <div id="htmlLoad" class="load" style="width: 70%;"></div>
                                     </div>
                                 </div>
                             </div>
@@ -86,7 +86,7 @@
                                 <img class="resumeBasicInfoIcon" src="./assets/react.png">
                                 <div class="loadingBar">
                                     <div class="loadingBackground">
-                                        <div id="reactLoad" class="load" style="width: 60%;"></div>
+                                        <div id="reactLoad" class="load" style="width: 45%;"></div>
                                     </div>
                                 </div>
                             </div>
@@ -103,6 +103,34 @@
                 <div class="projectsContent">
                     <div class="projectsTextTitle">
                         <span>Projetos em desenvolvimento</span>
+                        <button class="projectsTextTitleButton" onclick="showProjectContent()"><ion-icon name="arrow-down"></ion-icon></button>
+                    </div>
+                    <div class="projectsBox">
+                        <div class="projectBox" style="background: rgb(0, 200, 150); color: rgb(50, 80, 200);">
+                            <div class="projectBoxText">
+                                <div class="projectBoxTextPart">moneyCare</div>
+                                <div class="projectBoxTextPart">é uma interface para gerenciamento financeiro pessoal e profissional</div>
+                            </div>
+                        </div>
+                        <div class="projectBox" style="background: rgb(145, 75, 255); color: rgb(255, 255, 255);">
+                            <div class="projectBoxText">
+                                <div class="projectBoxTextPart">PH</div>
+                                <div class="projectBoxTextPart">é o site primário do grupo PH</div>
+                            </div>
+                        </div>
+                        <div class="projectBox" style="background: rgb(250, 150, 50); color: rgb(0, 0, 0);">
+                            <div class="projectBoxText">
+                                <div class="projectBoxTextPart">jumpThing</div>
+                                <div class="projectBoxTextPart">é um jogo multiplataforma inspirado nos clássicos dos anos 80</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="projectsContent">
+                    <div class="projectsTextTitle">
+                        <span>Projetos em desenvolvimento</span>
+                        <button class="projectsTextTitleButton" onclick="showProjectContent()"><ion-icon name="arrow-down"></ion-icon></button>
                     </div>
                     <div class="projectsBox">
                         <div class="projectBox" style="background: rgb(0, 200, 150); color: rgb(50, 80, 200);">
