basic infos added

--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
                         <div class="resumeBasics">
                             <div class="resumeBasicInfo">
                                 <img class="resumeBasicInfoIcon" src="./assets/star.png">
-                                <span>Porto Alegre - 02/08/2002</span>
+                                <span>Porto Alegre (RS/BR), 02/08/2002</span>
+                            </div>
+                            <div class="resumeBasicInfo">
+                                <img class="resumeBasicInfoIcon" src="./assets/house.png">
+                                <span>Curitiba (PR/BR)</span>
                             </div>
 
                             <div class="resumeBasicSkill">
